syntax = "proto3";
package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "sourcegraph.com/sourcegraph/srclib/unit/unit.proto";
import "sourcegraph.com/sourcegraph/srclib/graph/output.proto";
import "sourcegraph.com/sqs/pbtypes/void.proto";

option (gogoproto.goproto_getters_all) = false;

// A MultiRepoImporter imports srclib build data for a repository's
// source unit at a specific version into a RepoStore. It allows
// performing import operations over gRPC.
service MultiRepoImporter {
	// Import imports srclib build data for a source unit at a
	// specific version into the store.
	rpc Import(ImportOp) returns (pbtypes.Void);

	// Index builds indexes for a specific repo at a specific version.
	rpc Index(IndexOp) returns (pbtypes.Void);
}

message ImportOp {
	string repo = 1;
	string commit_id = 2 [(gogoproto.customname) = "CommitID"];
	unit.RepoSourceUnit unit = 3;
	graph.Output data = 4;
}

message IndexOp {
	string repo = 1;
	string commit_id = 2 [(gogoproto.customname) = "CommitID"];
}
